# SocialApp

./: .gitignore  ARCHITECTURE.md  docker-compose.yml
backend/: Cargo.toml
backend/migrations/: 0001_init.sql  0002_e2ee_devices.sql  0002_last_read.sql  0003_last_read_at.sql
backend/src/: config.rs  db.rs  errors.rs  main.rs  state.rs
backend/src/middleware/: auth.rs
backend/src/modules/: mod.rs
backend/src/modules/auth/: handlers.rs  mod.rs  models.rs  repo.rs  service.rs
backend/src/modules/devices/: handlers.rs  mod.rs  models.rs  repo.rs
backend/src/modules/media/: handlers.rs  mod.rs  models.rs  service.rs
backend/src/modules/messenger/: handlers.rs  hub.rs  mod.rs  models.rs  repo.rs  ws.rs
backend/src/modules/notifications/: handlers.rs  mod.rs  models.rs  repo.rs
backend/src/modules/posts/: handlers.rs  mod.rs  models.rs  repo.rs
backend/src/modules/users/: handlers.rs  mod.rs  models.rs  repo.rs
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/scripts/: copy-emoji.mjs
frontend/src/: api.js  crypto.js  main.js  style.css
